--- a/views/ia_result.xml
+++ b/views/ia_result.xml
@@ -1,38 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
 <data>
-    <template id="assets_frontend_result" inherit_id="website.assets_frontend" name="Survey Results assets">
+    <template id="assets_frontend_result" inherit_id="website.assets_frontend" name="ia Results assets">
         <xpath expr="." position="inside">
             <script src="/web_graph/static/lib/nvd3/d3.v3.js"></script>
             <script src="/web_graph/static/lib/nvd3/nv.d3.js"></script>
-            <script type="text/javascript" src="/survey/static/src/js/survey_result.js" />
+            <script type="text/javascript" src="/ia/static/src/js/ia_result.js" />
             <link href="/web_graph/static/src/css/nv.d3.css" rel="stylesheet" type="text/css"></link>
-            <link href="/survey/static/src/css/survey_result.css" rel="stylesheet" type="text/css"></link>
+            <link href="/ia/static/src/css/ia_result.css" rel="stylesheet" type="text/css"></link>
         </xpath>
     </template>
-    <template id="result" name="Survey Result">
+    <template id="result" name="ia Result">
         <t t-call="website.layout">
             <div class="oe_structure" />
             <div class="container">
                 <div class="jumbotron mt32">
-                    <h1><span t-field="survey.title" /> <span style="font-size:1.5em;" class="fa fa-bar-chart-o pull-right "/></h1>
-                    <div t-field="survey.description" class="oe_no_empty" />
+                    <h1><span t-field="ia.title" /> <span style="font-size:1.5em;" class="fa fa-bar-chart-o pull-right "/></h1>
+                    <div t-field="ia.description" class="oe_no_empty" />
                 </div>
                 <div class="panel panel-default hidden-print">
-                    <div class="panel-heading"><span class="fa fa-filter"></span>  Filters <span t-if="filter_display_data" class="pull-right text-primary clear_survey_filter"><i class="fa fa-times"></i> Clear All Filters</span></div>
+                    <div class="panel-heading"><span class="fa fa-filter"></span>  Filters <span t-if="filter_display_data" class="pull-right text-primary clear_ia_filter"><i class="fa fa-times"></i> Clear All Filters</span></div>
                     <div class="panel-body">
                         <span t-if="filter_finish == True">
-                            <span class="label label-default only_left_radius filter-all">All surveys</span><span class="label label-primary only_right_radius filter-finished">Finished surveys</span>
+                            <span class="label label-default only_left_radius filter-all">All ias</span><span class="label label-primary only_right_radius filter-finished">Finished ias</span>
                         </span>
                         <span t-if="filter_finish == False">
-                            <span class="label label-primary only_left_radius filter-all">All surveys</span><span class="label label-default only_right_radius filter-finished">Finished surveys</span>
+                            <span class="label label-primary only_left_radius filter-all">All ias</span><span class="label label-default only_right_radius filter-finished">Finished ias</span>
                         </span>
                         <span t-foreach="filter_display_data" t-as="filter_data">
                             <span class="label label-primary only_left_radius"><i class="fa fa-filter"></i></span><span class="label label-primary no_radius" t-esc="filter_data['question_text']"></span><span class="label label-success only_right_radius" t-esc="' > '.join(filter_data['labels'])"></span>
                         </span>
                     </div>
                 </div>
-                <div t-foreach="survey_dict['page_ids']" t-as='page_ids'>
+                <div t-foreach="ia_dict['page_ids']" t-as='page_ids'>
                     <t t-set="page" t-value="page_ids['page']"/>
                     <h1 class="mt16" t-field='page.title'></h1>
                     <div t-field="page.description" class="oe_no_empty" />
@@ -61,16 +61,16 @@
                                 <div class="text-muted oe_no_empty" t-field="question.description" />
                             </t>
                             <t t-if="question.type in ['textbox', 'free_text', 'datetime']">
-                                <t t-call="survey.result_text"></t>
+                                <t t-call="ia.result_text"></t>
                             </t>
                             <t t-if="question.type in ['simple_choice', 'multiple_choice']">
-                                <t t-call="survey.result_choice"></t>
+                                <t t-call="ia.result_choice"></t>
                             </t>
                             <t t-if="question.type == 'matrix'">
-                                <t t-call="survey.result_matrix"></t>
+                                <t t-call="ia.result_matrix"></t>
                             </t>
                             <t t-if="question.type == 'numerical_box'">
-                                <t t-call="survey.result_number"></t>
+                                <t t-call="ia.result_number"></t>
                             </t>
                         </t>
                         <t t-if="input_summary['answered'] == 0">
@@ -114,7 +114,7 @@
                 </tr>
             </tbody>
         </table>
-        <t t-call="survey.pagination" />
+        <t t-call="ia.pagination" />
     </template>
 
     <!-- Result for comments -->
@@ -161,11 +161,11 @@
                 </li>
             </ul>
             <div class="tab-content">
-                <div class="tab-pane active survey_graph" t-if="question.type != 'simple_choice'" t-att-id="'graph_question_%d' % question.id" t-att-data-question_id="question.id" data-graph_type="bar" t-att-graph-data="graph_data">
+                <div class="tab-pane active ia_graph" t-if="question.type != 'simple_choice'" t-att-id="'graph_question_%d' % question.id" t-att-data-question_id="question.id" data-graph_type="bar" t-att-graph-data="graph_data">
                     <!-- svg element for drawing bar chart -->
                     <svg style="height:20em"></svg>
                 </div>
-                <div class="tab-pane active survey_graph" t-if="question.type == 'simple_choice'" t-att-id="'graph_question_%d' % question.id" t-att-data-question_id="question.id" data-graph_type="pie" t-att-graph-data="graph_data">
+                <div class="tab-pane active ia_graph" t-if="question.type == 'simple_choice'" t-att-id="'graph_question_%d' % question.id" t-att-data-question_id="question.id" data-graph_type="pie" t-att-graph-data="graph_data">
                     <!-- svg element for drawing pie chart -->
                     <svg style="height:20em"></svg>
                 </div>
@@ -182,10 +182,10 @@
                                 <td>
                                     <p t-esc="user_input['text']"></p>
                                 </td>
-                                <td class="survey_answer">
+                                <td class="ia_answer">
                                     <span t-esc="round(user_input['count']*100.0/(input_summary['answered'] or 1),2)"></span> %
                                     <span t-esc="user_input['count']" class="label label-primary">Vote</span>
-                                    <i class="fa fa-filter text-primary invisible survey_filter" t-att-data-question_id="question.id" t-att-data-answer_id="user_input['answer_id']"></i>
+                                    <i class="fa fa-filter text-primary invisible ia_filter" t-att-data-question_id="question.id" t-att-data-answer_id="user_input['answer_id']"></i>
                                 </td>
                             </tr>
                         </tbody>
@@ -196,7 +196,7 @@
             <div>
                 <t t-set="comments" t-value="prepare_result['comments']" />
                 <t t-if="comments">
-                    <t t-call="survey.result_comments" />
+                    <t t-call="ia.result_comments" />
                 </t>
             </div>
 
@@ -222,7 +222,7 @@
             </li>
         </ul>
         <div class="tab-content">
-            <div class="tab-pane active with-3d-shadow with-transitions survey_graph" t-att-id="'graph_question_%d' % question.id" t-att-data-question_id= "question.id" data-graph_type= "multi_bar" t-att-graph-data="graph_data">
+            <div class="tab-pane active with-3d-shadow with-transitions ia_graph" t-att-id="'graph_question_%d' % question.id" t-att-data-question_id= "question.id" data-graph_type= "multi_bar" t-att-graph-data="graph_data">
                 <!-- svg element for drawing Multibar chart -->
                 <svg style="height:20em"></svg>
             </div>
@@ -241,9 +241,9 @@
                             <td>
                                 <span t-esc="matrix_result['rows'][row_id]"></span>
                             </td>
-                            <td class="survey_answer" t-foreach="matrix_result['answers']" t-as="answer_id">
+                            <td class="ia_answer" t-foreach="matrix_result['answers']" t-as="answer_id">
                                 <span t-esc="round(matrix_result['result'][(row_id,answer_id)]*100.0/(input_summary['answered'] or 1),2)"></span> %
-                                <span class="label label-primary" t-esc="matrix_result['result'][(row_id,answer_id)]"></span><i class="fa fa-filter text-primary invisible survey_filter" t-att-data-question_id="question.id" t-att-data-row_id="row_id" t-att-data-answer_id="answer_id"></i>
+                                <span class="label label-primary" t-esc="matrix_result['result'][(row_id,answer_id)]"></span><i class="fa fa-filter text-primary invisible ia_filter" t-att-data-question_id="question.id" t-att-data-row_id="row_id" t-att-data-answer_id="answer_id"></i>
                             </td>
                         </tr>
                     </tbody>
@@ -253,7 +253,7 @@
             <div>
                 <t t-set="comments" t-value="matrix_result['comments']" />
                 <t t-if="comments">
-                    <t t-call="survey.result_comments" />
+                    <t t-call="ia.result_comments" />
                 </t>
             </div>
         </div>
@@ -319,27 +319,27 @@
                         </tr>
                     </tbody>
                 </table>
-               <t t-call="survey.pagination"/>
+               <t t-call="ia.pagination"/>
             </div>
         </div>
     </template>
-    <template id="no_result" name="Survey Result">
+    <template id="no_result" name="ia Result">
         <t t-call="website.layout">
             <div class="container">
-                <h2><span t-field='survey.title'></span></h2>
+                <h2><span t-field='ia.title'></span></h2>
                 <div class="jumbotron mt32">
                     <h2 class="text-muted">
                         <span>
                             <i style="font-size:1.8em" class="fa fa-users pull-right"></i>
                         </span>
-                        Sorry, No one answered this survey yet
+                        Sorry, No one answered this ia yet
                     </h2>
                 </div>
             </div>
         </t>
     </template>
     <!-- Pagination Element -->
-    <template id="pagination" name="Survey Result">
+    <template id="pagination" name="ia Result">
         <t t-set="record_limit" t-value="10"/><!-- Change This record_limit to change number of record  per page-->
         <ul t-att-id="'pagination_%d' % question.id" class="pagination" t-att-data-question_id="question.id" t-att-data-record_limit="record_limit">
             <t t-if="len(text_result) > record_limit">
