--- a/views/ia_templates.xml
+++ b/views/ia_templates.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
 <data>
-    <!-- "Thank you" message when the survey is completed -->
-    <template id="sfinished" name="Survey Finished">
+    <!-- "Thank you" message when the ia is completed -->
+    <template id="sfinished" name="ia Finished">
         <t t-call="website.layout">
             <div class="wrap">
                 <div class="container">
                     <div class="jumbotron mt32">
                         <h1>Thank you!</h1>
-                        <div t-field="survey.thank_you_message" class="oe_no_empty" />
-                        <div t-if='survey.quizz_mode'>You scored <t t-esc="user_input.quizz_score" /> points.</div>
-                        <div>If you wish, you can <a t-att-href="'/survey/print/%s/%s' % (slug(survey), token)">review your answers</a>.</div>
+                        <div t-field="ia.thank_you_message" class="oe_no_empty" />
+                        <div t-if='ia.quizz_mode'>You scored <t t-esc="user_input.quizz_score" /> points.</div>
+                        <div>If you wish, you can <a t-att-href="'/ia/print/%s/%s' % (slug(ia), token)">review your answers</a>.</div>
                     </div>
                 </div>
             </div>
         </t>
     </template>
 
-    <!-- Message when the survey is not open  -->
-    <template id="notopen" name="Survey not open">
+    <!-- Message when the ia is not open  -->
+    <template id="notopen" name="ia not open">
         <t t-call="website.layout">
             <div class="wrap">
                 <div class="container">
                     <div class="jumbotron mt32">
                         <h1>Not open</h1>
-                        <p>This survey is not open. Thank you for your interest!</p>
+                        <p>This ia is not open. Thank you for your interest!</p>
                     </div>
                 </div>
             </div>
@@ -32,47 +32,47 @@
     </template>
 
     <!-- Message when a login is required  -->
-    <template id="auth_required" name="Login required for this survey">
+    <template id="auth_required" name="Login required for this ia">
         <t t-call="website.layout">
             <div class="wrap">
                 <div class="container">
                     <div class="jumbotron mt32">
                         <h1>Login required</h1>
-                        <p>This survey is open only to registered people. Please <a t-attf-href="/web/login?redirect=%2Fsurvey%2Fstart%2F#{ slug(survey) }">log in</a>.</p>
+                        <p>This ia is open only to registered people. Please <a t-attf-href="/web/login?redirect=%2Fia%2Fstart%2F#{ slug(ia) }">log in</a>.</p>
                     </div>
                 </div>
             </div>
         </t>
     </template>
 
-    <!-- Message when the survey has no pages  -->
-    <template id="nopages" name="Survey has no pages">
+    <!-- Message when the ia has no pages  -->
+    <template id="nopages" name="ia has no pages">
         <t t-call="website.layout">
             <div class="wrap">
                 <div class="container">
                     <div class="jumbotron mt32">
                         <h1>Not ready</h1>
-                        <p>This survey has no pages by now!</p>
+                        <p>This ia has no pages by now!</p>
                     </div>
                 </div>
             </div>
         </t>
     </template>
 
-    <!-- First page of a survey -->
-    <template id="survey_init" name="Survey">
+    <!-- First page of a ia -->
+    <template id="ia_init" name="ia">
         <t t-call="website.layout">
             <div class="wrap">
                 <div class="oe_structure" />
                 <div class="container">
                     <div groups="base.group_website_publisher" t-ignore="true" class="text-right">
-                        <a href="/web#action=survey.action_survey_form" class="btn btn-default">Go back to surveys</a>
+                        <a href="/web#action=ia.action_ia_form" class="btn btn-default">Go back to ias</a>
                     </div>
                     <div class='jumbotron mt32'>
-                        <h1 t-field='survey.title' />
-                        <div t-field='survey.description' class="oe_no_empty"/>
-                        <a class="btn btn-primary btn-lg" t-att-href="'/survey/fill/%s/%s' % (slug(survey), token)">
-                            Start Survey
+                        <h1 t-field='ia.title' />
+                        <div t-field='ia.description' class="oe_no_empty"/>
+                        <a class="btn btn-primary btn-lg" t-att-href="'/ia/fill/%s/%s' % (slug(ia), token)">
+                            Start ia
                         </a>
                     </div>
                 </div>
@@ -81,21 +81,21 @@
         </t>
     </template>
 
-    <!-- A survey -->
-    <template id="assets_frontend" inherit_id="website.assets_frontend" name="Survey assets">
+    <!-- A ia -->
+    <template id="assets_frontend" inherit_id="website.assets_frontend" name="ia assets">
         <xpath expr="." position="inside">
-            <script type="text/javascript" src="/survey/static/src/js/survey.js" />
+            <script type="text/javascript" src="/ia/static/src/js/ia.js" />
         </xpath>
     </template>
-    <template id="survey" name="Survey">
+    <template id="ia" name="ia">
         <t t-call="website.layout">
             <div class="wrap">
                 <div class="oe_structure"/>
                 <div class="container">
                     <div groups="base.group_website_publisher" t-ignore="true" class="text-right">
-                        <a href="/web#action=survey.action_survey_form" class="btn btn-default">Go back to surveys</a>
+                        <a href="/web#action=ia.action_ia_form" class="btn btn-default">Go back to ias</a>
                     </div>
-                    <t t-call="survey.page" />
+                    <t t-call="ia.page" />
                 </div>
                 <div class="oe_structure"/>
             </div>
@@ -105,36 +105,36 @@
     <!-- A page -->
     <template id="page" name="Page">
         <div class="page-header">
-            <p class="pull-right">Page <span t-raw='page_nr + 1'/> on <span t-raw="len(survey.page_ids)"/></p>
+            <p class="pull-right">Page <span t-raw='page_nr + 1'/> on <span t-raw="len(ia.page_ids)"/></p>
             <h1 t-field='page.title' />
             <div t-field='page.description' class="oe_no_empty"/>
         </div>
 
-        <form role="form" method="post" class="js_surveyform" t-att-name="'%s_%s' % (survey.id, page.id)" t-att-action="'/survey/fill/%s/%s' % (slug(survey), token)" t-att-data-prefill="'/survey/prefill/%s/%s/%s' % (slug(survey), token, slug(page))" t-att-data-validate="'/survey/validate/%s' % (slug(survey))" t-att-data-submit="'/survey/submit/%s' % (slug(survey))">
+        <form role="form" method="post" class="js_iaform" t-att-name="'%s_%s' % (ia.id, page.id)" t-att-action="'/ia/fill/%s/%s' % (slug(ia), token)" t-att-data-prefill="'/ia/prefill/%s/%s/%s' % (slug(ia), token, slug(page))" t-att-data-validate="'/ia/validate/%s' % (slug(ia))" t-att-data-submit="'/ia/submit/%s' % (slug(ia))">
             <input type="hidden" name="page_id" t-att-value="page.id" />
             <input type="hidden" name="token" t-att-value="token" />
             <t t-foreach='page.question_ids' t-as='question'>
-                <t t-set="prefix" t-value="'%s_%s_%s' % (survey.id, page.id, question.id)" />
+                <t t-set="prefix" t-value="'%s_%s_%s' % (ia.id, page.id, question.id)" />
                 <div class="js_question-wrapper" t-att-id="prefix">
                     <h2>
                         <span t-field='question.question' />
                         <span t-if="question.constr_mandatory" class="text-danger">*</span>
                     </h2>
                     <div t-field='question.description' class="text-muted oe_no_empty"/>
-                    <t t-if="question.type == 'free_text'"><t t-call="survey.free_text"/></t>
-                    <t t-if="question.type == 'textbox'"><t t-call="survey.textbox"/></t>
-                    <t t-if="question.type == 'numerical_box'"><t t-call="survey.numerical_box"/></t>
-                    <t t-if="question.type == 'datetime'"><t t-call="survey.datetime"/></t>
-                    <t t-if="question.type == 'simple_choice'"><t t-call="survey.simple_choice"/></t>
-                    <t t-if="question.type == 'multiple_choice'"><t t-call="survey.multiple_choice"/></t>
-                    <t t-if="question.type == 'matrix'"><t t-call="survey.matrix"/></t>
+                    <t t-if="question.type == 'free_text'"><t t-call="ia.free_text"/></t>
+                    <t t-if="question.type == 'textbox'"><t t-call="ia.textbox"/></t>
+                    <t t-if="question.type == 'numerical_box'"><t t-call="ia.numerical_box"/></t>
+                    <t t-if="question.type == 'datetime'"><t t-call="ia.datetime"/></t>
+                    <t t-if="question.type == 'simple_choice'"><t t-call="ia.simple_choice"/></t>
+                    <t t-if="question.type == 'multiple_choice'"><t t-call="ia.multiple_choice"/></t>
+                    <t t-if="question.type == 'matrix'"><t t-call="ia.matrix"/></t>
                     <div class="js_errzone alert alert-danger" style="display:none;"></div>
                 </div>
             </t>
             <div class="text-center mt16 mb16">
-                <button t-if="survey.users_can_go_back and page_nr > 0" type="submit" class="btn btn-default" name="button_submit" value="previous">Previous page</button>
+                <button t-if="ia.users_can_go_back and page_nr > 0" type="submit" class="btn btn-default" name="button_submit" value="previous">Previous page</button>
                 <button t-if="not last" type="submit" class="btn btn-primary" name="button_submit" value="next">Next page</button>
-                <button t-if="last" type="submit" class="btn btn-primary" name="button_submit" value="finish">Submit survey</button>
+                <button t-if="last" type="submit" class="btn btn-primary" name="button_submit" value="finish">Submit ia</button>
             </div>
         </form>
 
@@ -146,7 +146,7 @@
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&amp;times;</button>
                         <h4 class="modal-title">A problem has occured</h4>
                     </div>
-                    <div class="modal-body"><p>Something went wrong while contacting survey server. <strong class="text-danger">Your answers have probably not been recorded.</strong> Try refreshing.</p></div>
+                    <div class="modal-body"><p>Something went wrong while contacting ia server. <strong class="text-danger">Your answers have probably not been recorded.</strong> Try refreshing.</p></div>
                     <div class="modal-footer"><button type="button" class="btn btn-primary" data-dismiss="modal">Close</button></div>
                 </div>
             </div>
@@ -185,7 +185,7 @@
                 </select>
             </div>
             <div t-if='question.comments_allowed and question.comment_count_as_answer' class="col-md-6">
-                <input type="text" class="form-control" t-att-name="'%s_%s' % (prefix, 'comment')" data-oe-survey-othert="1"/>
+                <input type="text" class="form-control" t-att-name="'%s_%s' % (prefix, 'comment')" data-oe-ia-othert="1"/>
             </div>
             <div t-if='question.comments_allowed and not question.comment_count_as_answer' class="col-md-12 mt16">
                 <span t-field="question.comments_message"/>
@@ -208,7 +208,7 @@
             </div>
             <div t-if='question.comments_allowed and not question.comment_count_as_answer' class="col-md-12">
                 <span t-field="question.comments_message"/>
-                <input type="text" class="form-control" t-att-name="'%s_%s' % (prefix, 'comment')" data-oe-survey-othert="1"/>
+                <input type="text" class="form-control" t-att-name="'%s_%s' % (prefix, 'comment')" data-oe-ia-othert="1"/>
             </div>
         </div>
     </template>
@@ -230,7 +230,7 @@
             </div>
             <div t-if='question.comments_allowed and not question.comment_count_as_answer' class="col-md-12">
                 <span t-field="question.comments_message"/>
-                <input type="text" class="form-control" t-att-name="'%s_%s' % (prefix, 'comment')" data-oe-survey-othert="1"/>
+                <input type="text" class="form-control" t-att-name="'%s_%s' % (prefix, 'comment')" data-oe-ia-othert="1"/>
             </div>
         </div>
     </template>
@@ -259,24 +259,24 @@
         </div>
     </template>
 
-    <!-- Printable view of a survey (all pages) -->
-    <template id="survey_print" name="Survey">
+    <!-- Printable view of a ia (all pages) -->
+    <template id="ia_print" name="ia">
         <t t-call="website.layout">
             <div class="wrap">
                 <div class="container">
                     <div class="row">
                         <div class='jumbotron mt32'>
-                            <h1><span t-field='survey.title'/></h1>
-                            <t t-if="survey.description"><div t-field='survey.description' class="oe_no_empty"/></t>
+                            <h1><span t-field='ia.title'/></h1>
+                            <t t-if="ia.description"><div t-field='ia.description' class="oe_no_empty"/></t>
                         </div>
-                        <form role="form" method="post" class="js_surveyform" t-att-name="'%s' % (survey.id)" t-att-data-prefill="'/survey/prefill/%s/%s' % (slug(survey), token)" t-att-data-scores="'/survey/scores/%s/%s' % (slug(survey), token) if quizz_correction else ''">
-                            <t t-foreach="survey.page_ids" t-as="page">
+                        <form role="form" method="post" class="js_iaform" t-att-name="'%s' % (ia.id)" t-att-data-prefill="'/ia/prefill/%s/%s' % (slug(ia), token)" t-att-data-scores="'/ia/scores/%s/%s' % (slug(ia), token) if quizz_correction else ''">
+                            <t t-foreach="ia.page_ids" t-as="page">
                                 <div class="page-header">
                                     <h1 t-field='page.title' />
                                     <t t-if="page.description"><div t-field='page.description' class="oe_no_empty"/></t>
                                 </div>
                                 <t t-foreach='page.question_ids' t-as='question'>
-                                    <t t-set="prefix" t-value="'%s_%s_%s' % (survey.id, page.id, question.id)" />
+                                    <t t-set="prefix" t-value="'%s_%s_%s' % (ia.id, page.id, question.id)" />
                                     <div class="js_question-wrapper" t-att-id="prefix">
                                         <h2>
                                             <span t-field='question.question' />
@@ -284,13 +284,13 @@
                                             <span t-if="quizz_correction" class="badge" t-att-data-score-question="question.id"></span>
                                         </h2>
                                         <t t-if="question.description"><div class="text-muted oe_no_empty" t-field='question.description'/></t>
-                                        <t t-if="question.type == 'free_text'"><t t-call="survey.free_text"/></t>
-                                        <t t-if="question.type == 'textbox'"><t t-call="survey.textbox"/></t>
-                                        <t t-if="question.type == 'numerical_box'"><t t-call="survey.numerical_box"/></t>
-                                        <t t-if="question.type == 'datetime'"><t t-call="survey.datetime"/></t>
-                                        <t t-if="question.type == 'simple_choice'"><t t-call="survey.simple_choice"/></t>
-                                        <t t-if="question.type == 'multiple_choice'"><t t-call="survey.multiple_choice"/></t>
-                                        <t t-if="question.type == 'matrix'"><t t-call="survey.matrix"/></t>
+                                        <t t-if="question.type == 'free_text'"><t t-call="ia.free_text"/></t>
+                                        <t t-if="question.type == 'textbox'"><t t-call="ia.textbox"/></t>
+                                        <t t-if="question.type == 'numerical_box'"><t t-call="ia.numerical_box"/></t>
+                                        <t t-if="question.type == 'datetime'"><t t-call="ia.datetime"/></t>
+                                        <t t-if="question.type == 'simple_choice'"><t t-call="ia.simple_choice"/></t>
+                                        <t t-if="question.type == 'multiple_choice'"><t t-call="ia.multiple_choice"/></t>
+                                        <t t-if="question.type == 'matrix'"><t t-call="ia.matrix"/></t>
                                         <div class="js_errzone alert alert-danger" style="display:none;"></div>
                                     </div>
                                 </t>
