--- a/views/ia_views.xml
+++ b/views/ia_views.xml
@@ -9,16 +9,14 @@
             <field name="arch" type="xml">
                 <search string="Search ia">
                     <field name="ia_id"/>
-                    <field name="email"/>
                     <field name="partner_id"/>
-                    <filter string="Completed" domain="[('state', '=', 'done')]"/>
+                    <filter name='completed' string="Completed" domain="[('state', '=', 'done')]"/>
                     <filter string="Partially completed" domain="[('state', '=', 'skip')]"/>
                     <filter string="New" domain="[('state', '=', 'new')]"/>
                     <filter string="Test" domain="[('state','=', 'test')]"/>
                     <group expand="0" string="Group By">
                         <filter name="group_by_ia" string="ia" domain="[]" context="{'group_by': 'ia_id'}"/>
-                        <filter string="Email" domain="[]" context="{'group_by': 'email'}"/>
-                        <filter string="Partner" domain="[]" context="{'group_by': ['partner_id']}"/>
+                        <filter name="group_by_partner" string="Partner" domain="[]" context="{'group_by': ['partner_id']}"/>
                     </group>
                 </search>
             </field>
@@ -90,7 +88,9 @@
             <field name="view_mode">tree,form</field>
             <field name="view_id" ref="ia_user_input_tree"></field>
             <field name="search_view_id" ref="ia_user_input_search"/>
-            <field name="context">{'search_default_group_by_ia': True}</field>
+            <field name="context">{'search_default_group_by_ia': True,
+              'search_default_group_by_partner': True,
+              'search_default_completed': True}</field>
             <field name="help" type="html">
                 <p>Nobody has replied to your ias yet.</p>
             </field>
@@ -467,6 +467,7 @@
                     <field name="user_input_id"/>
                     <field name="page_id"/>
                     <field name="question_id"/>
+                    <field name="partner_id"/>
                     <field name="date_create"/>
                     <field name="answer_type"/>
                     <field name="skipped"/>
@@ -482,8 +483,8 @@
                     <field name="user_input_id"/>
                     <field name="ia_id"/>
                     <group expand="1" string="Group By">
-                        <filter name="group_by_ia" string="ia" domain="[]"  context="{'group_by':'ia_id'}"/>
-                        <filter name="group_by_user_input" string="User Input" domain="[]"  context="{'group_by':'user_input_id'}"/>
+                        <filter name="group_by_ia" string="Assessment" domain="[]"  context="{'group_by':'ia_id'}"/>
+                        <filter name="group_by_partner_id" string="Submitter" domain="[]"  context="{'group_by':'partner_id'}"/>
                     </group>
                 </search>
             </field>
@@ -494,7 +495,7 @@
             <field name="res_model">ia.user_input_line</field>
             <field name="view_mode">tree,form</field>
             <field name="search_view_id" ref="ia_response_line_search"/>
-            <field name="context">{'search_default_group_by_ia': True, 'search_default_group_by_user_input': True}</field>
+            <field name="context">{'search_default_group_by_ia': True, 'search_default_group_by_partner_id': True}</field>
         </record>
 
 
