Side-by-side comparison of html renders of two submissions

--- a/static/src/css/ia_result.css
+++ b/static/src/css/ia_result.css
@@ -42,6 +42,16 @@
     visibility: hidden!important;
 }
 
+.ia-compare-left {
+    float: left;
+    width: 50%;
+}
+
+.ia-compare-right {
+    float: right;
+    width: 50%;
+}
+
 @media print {
     .tab-content > .tab-pane {
         display: block;
