--- a/views/ia_templates.xml
+++ b/views/ia_templates.xml
@@ -302,5 +302,83 @@
             </div>
         </t>
     </template>
+
+    <!-- Comparative view of two ias (all pages) -->
+
+    <template id="ia_compare" name="Compare IAs">
+        <t t-call="website.layout">
+            <div class="wrap">
+                <div class="container">
+                    <div class="row">
+                        <div class='jumbotron mt32'>
+                            <h1><span t-field='ia_left.title'/></h1>
+                            <t t-if="ia_left.description"><div t-field='ia.description' class="oe_no_empty"/></t>
+                        </div>
+                        <div class='ia-compare-left'>
+                          <form role="form" method="post" class="js_iaform" t-att-name="'%s' % (ia_left.id)" t-att-data-prefill="'/ia/prefill/%s/%s' % (slug(ia_left), token_left)" t-att-data-scores="'/ia/scores/%s/%s' % (slug(ia_left), token_left) if quizz_correction else ''">
+                              <t t-foreach="ia_left.page_ids" t-as="page">
+                                  <div class="page-header">
+                                      <h1 t-field='page.title' />
+                                      <t t-if="page.description"><div t-field='page.description' class="oe_no_empty"/></t>
+                                  </div>
+                                  <t t-foreach='page.question_ids' t-as='question'>
+                                      <t t-set="prefix" t-value="'%s_%s_%s' % (ia_right.id, page.id, question.id)" />
+                                      <div class="js_question-wrapper" t-att-id="prefix">
+                                          <h2>
+                                              <span t-field='question.question' />
+                                              <span t-if="question.constr_mandatory" class="text-danger">*</span>
+                                              <span t-if="quizz_correction" class="badge" t-att-data-score-question="question.id"></span>
+                                          </h2>
+                                          <t t-if="question.description"><div class="text-muted oe_no_empty" t-field='question.description'/></t>
+                                          <t t-if="question.type == 'free_text'"><t t-call="ia.free_text"/></t>
+                                          <t t-if="question.type == 'textbox'"><t t-call="ia.textbox"/></t>
+                                          <t t-if="question.type == 'numerical_box'"><t t-call="ia.numerical_box"/></t>
+                                          <t t-if="question.type == 'datetime'"><t t-call="ia.datetime"/></t>
+                                          <t t-if="question.type == 'simple_choice'"><t t-call="ia.simple_choice"/></t>
+                                          <t t-if="question.type == 'multiple_choice'"><t t-call="ia.multiple_choice"/></t>
+                                          <t t-if="question.type == 'matrix'"><t t-call="ia.matrix"/></t>
+                                          <div class="js_errzone alert alert-danger" style="display:none;"></div>
+                                      </div>
+                                  </t>
+                                  <hr/>
+                              </t>
+                          </form>
+                        </div> <!-- End Left Container -->
+                        <div class='ia-compare-right'>
+                          <form role="form" method="post" class="js_iaform" t-att-name="'%s' % (ia_right.id)" t-att-data-prefill="'/ia/prefill/%s/%s' % (slug(ia_right), token_right)" t-att-data-scores="'/ia/scores/%s/%s' % (slug(ia_right), token_right) if quizz_correction else ''">
+                              <t t-foreach="ia_right.page_ids" t-as="page">
+                                  <div class="page-header">
+                                      <h1 t-field='page.title' />
+                                      <t t-if="page.description"><div t-field='page.description' class="oe_no_empty"/></t>
+                                  </div>
+                                  <t t-foreach='page.question_ids' t-as='question'>
+                                      <t t-set="prefix" t-value="'%s_%s_%s' % (ia_right.id, page.id, question.id)" />
+                                      <div class="js_question-wrapper" t-att-id="prefix">
+                                          <h2>
+                                              <span t-field='question.question' />
+                                              <span t-if="question.constr_mandatory" class="text-danger">*</span>
+                                              <span t-if="quizz_correction" class="badge" t-att-data-score-question="question.id"></span>
+                                          </h2>
+                                          <t t-if="question.description"><div class="text-muted oe_no_empty" t-field='question.description'/></t>
+                                          <t t-if="question.type == 'free_text'"><t t-call="ia.free_text"/></t>
+                                          <t t-if="question.type == 'textbox'"><t t-call="ia.textbox"/></t>
+                                          <t t-if="question.type == 'numerical_box'"><t t-call="ia.numerical_box"/></t>
+                                          <t t-if="question.type == 'datetime'"><t t-call="ia.datetime"/></t>
+                                          <t t-if="question.type == 'simple_choice'"><t t-call="ia.simple_choice"/></t>
+                                          <t t-if="question.type == 'multiple_choice'"><t t-call="ia.multiple_choice"/></t>
+                                          <t t-if="question.type == 'matrix'"><t t-call="ia.matrix"/></t>
+                                          <div class="js_errzone alert alert-danger" style="display:none;"></div>
+                                      </div>
+                                  </t>
+                                  <hr/>
+                              </t>
+                          </form>
+                        </div> <!-- End Right Container -->
+                    </div>
+                </div>
+            </div>
+        </t>
+    </template>
+
 </data>
 </openerp>
